# playmoleculeai-evals

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/agent-traces-db/: SKILL.md
.claude/skills/agent-traces-db/references/: dashboard-extras.md
.claude/skills/eval-authoring/: SKILL.md
.claude/skills/issue/: SKILL.md
development/: chat_67.jsonl  chat_82_dev.jsonl  dump_chat_1170.py  dump_chat_1677.py  dump_chat_82_dev.py  test_case_1.ipynb  test_case_1.py  test_case_2.py  test_case_4.py
docs/: SPEC.md  how-it-works.md  plan.md  spec.md  writing-evals.md
eval_sets/bixbench/: cases.yaml  checks.py  eval_set.yaml  rubric.md  rubric.yaml  test_checks.py
eval_sets/bixbench-verified/: cases.yaml  checks.py  eval_set.yaml  rubric.md  rubric.yaml
eval_sets/molecular-visualization/: cases.yaml  checks.py  eval_set.yaml  example_evals.md  rubric.md  rubric.yaml  test_checks.py
eval_sets/molecular-visualization/fixtures/: ligand.sdf  outlig0.sdf
scripts/: fetch_bixbench.py  plot_accuracy_vs_cost.py  plot_bixbench_verified.py  plot_model_metrics.py  recompute_run_metrics.py  test_load_fetch.py
src/pmai_evals/: __init__.py  _io.py  cli.py  config.py  errors.py  eval_loader.py  pricing.py  pricing.yaml  schemas.py
src/pmai_evals/browser/: __init__.py  chat.py  fixtures.py  locators.py  observers.py  project_files.py  session.py  viewer_loader.py
src/pmai_evals/grading/: __init__.py  assertions.py  critique.py  grade_run.py  judge.py
src/pmai_evals/grading/prompts/: critique.md  judge_absolute.md  judge_pairwise.md
src/pmai_evals/grading/rubrics/: visualization.yaml
src/pmai_evals/reporting/: __init__.py  aggregate.py  render.py
src/pmai_evals/reporting/templates/: benchmark.html.j2
src/pmai_evals/runner/: __init__.py  artifacts.py  budget.py  executor.py  manifest.py
src/pmai_evals/trace/: __init__.py  http_reader.py  reader.py  schemas.py
tests/: conftest.py  test_aggregate.py  test_assertions.py  test_budget.py  test_critique.py  test_eval_loader.py  test_eval_set_checks.py  test_grade_serialization.py  test_http_reader.py  test_runner_manifest.py  test_session_auth.py  test_trace_reader.py
